non-msrv-tests/tests/ui/use_case.stderr
error: derive-where doesn't support items without generics, `skip` attributes or `enum`s implementing `Default`, as this can already be handled by standard `#[derive(..)]`
 --> tests/ui/use_case.rs:4:1
  |
4 | / #[derive_where(Clone)]
5 | | struct StructNone(u8);
  | |______________________^

error: derive-where doesn't support items without generics, `skip` attributes or `enum`s implementing `Default`, as this can already be handled by standard `#[derive(..)]`
  --> tests/ui/use_case.rs:8:1
   |
8  | / #[derive_where(Clone)]
9  | | enum EnumNone {
10 | |     A(u8),
11 | | }
   | |_^
